tests/run/error_array_heterogeneous.em
// error_array_heterogeneous.em — array elements must share one type.
fn main() -> int {
    let a = [1, "two"]
    return 0
}
